remove project bulleting

--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,7 @@
   <div class="content">
     <main>
       <h2>Projects</h2>
-      <ul>
-        <li>Under construction.</li>
-      </ul>
+      <p>Under construction.</p>
     </main>
   </div>
 
