improve site visibility, metadata, and documentation

--- a/cv.html
+++ b/cv.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>CV - Paul Chichura</title>
+  <meta name="description" content="Paul Chichura's curriculum vitae and resume, including education, experience, and achievements." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://pchichura.github.io/cv.html">
 </head>
 <body>
   <header class="site-header">
