--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Projects - Paul Chichura</title>
+  <meta name="description" content="Explore Paul Chichura's personal projects exploring fun aspects of coding and research." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://pchichura.github.io/projects.html">
 </head>
 <body>
   <header class="site-header">
