--- a/talks.html
+++ b/talks.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Research - Paul Chichura</title>
+  <title>Talks - Paul Chichura</title>
+  <meta name="description" content="Talks, lectures, and conference presentations by Paul Chichura." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://pchichura.github.io/talks.html">
 </head>
 <body>
   <header class="site-header">
