Google HTML tag verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Paul Chichura</title>
+  <meta name="google-site-verification" content="azEihSXoDF7uoVwHyK0moDKgzIciaQPmYwbSVvWPmrw" />
   <meta name="description" content="Personal website of Paul Chichura – research, projects, and publications in astronomy, machine learning, and data science." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
