update resume Oct 2025

--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
       <p><b>
         Click
         <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer">here</a>
-        to download a PDF of all my publications.
+        to download a PDF of a list of all my publications.
       </b></p>
 
       <p>Here are NASA ADS libraries of my first-author and Nth-author publications:</p>
