--- a/talks.html
+++ b/talks.html
@@ -40,6 +40,20 @@
       <p>View resources and information from my recent talks and presentations, some of which have been recorded.</p>
 
       <section class="talk-year">
+        <h3>2026</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Telescope Control with Machine Learning: Pointing Corrections and Observation Scheduling</h4>
+          <div class="talk-meta"><em>Contributed talk | USNC-URSI National Radio Science Meeting (NRSM) | University of Colorado Boulder | 6-9 Jan 2026</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/16Dg9yG9BSDDH5NxKMd4SBOtndO6etibD/view?usp=sharing" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://nrsmboulder.org/view_paper.php?PaperNum=1298" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="talk-year">
         <h3>2025</h3>
 
         <article class="talk">
@@ -53,7 +67,7 @@
 
         <article class="talk">
           <h4 class="talk-title">Pointing the South Pole Telescope with Machine Learning</h4>
-          <div class="talk-meta"><em>Contributed talk | USNC-URSI National Radio Science Meeting (NRSM) | University of Colorado | 7-10 Jan 2025</em></div>
+          <div class="talk-meta"><em>Contributed talk | USNC-URSI National Radio Science Meeting (NRSM) | University of Colorado Boulder | 7-10 Jan 2025</em></div>
           <div class="talk-links">
             <a href="https://drive.google.com/file/d/1yrXx1A6Tm80wTGsS7ONhWexR9kWMOipy/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
             <a href="https://www.nrsmboulder.org/2025/view_paper.php?PaperNum=1251#top" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
